# zed-mermaid-preview

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MERMAID.md  README.md  SECURITY.md  build.sh  debug-test.md  example.md  extension.toml  force-restart.md  install.sh  package-lock.json  set_env.sh  test-edit-diagram.md  test-edit-functionality.md  test-edit-new.md  test-mermaid-edit.md  test-script-fix.md  test.md  test_labels_v0.1.21.md  test_new.md  test_wrapper_fix
.mermaid/: example_1761793837_11.mmd  example_1761793902_76.mmd  example_1761793980_154.mmd  example_1761794054_36.mmd  example_1761794457_8.mmd  example_1761795702_29.mmd  example_1761835160_62.mmd  example_1761835705_75.mmd  example_1761844280_85.mmd  example_1761844282_118.mmd  example_1761847028_0.mmd  example_1761847867_28.mmd  example_1761854826_56.mmd  example_1761858839_17.mmd  example_1761880167_39.mmd  example_1761882202_128.mmd  force-restart_1761841977_0.mmd  test-edit-diagram_1730306001_1.mmd  test-edit-functionality_1761842820_0.mmd  test_labels_v0.1.21_1761878166_4.mmd  test_labels_v0.1.21_1761878166_5.mmd  test_labels_v0.1.21_1761878317_9.mmd  test_labels_v0.1.21_1761878335_18.mmd  test_labels_v0.1.21_1761879040_10.mmd  test_labels_v0.1.21_1761879045_11.mmd  test_labels_v0.1.21_1761879045_12.mmd  test_labels_v0.1.21_1761879078_25.mmd  test_labels_v0.1.21_1761879095_33.mmd
lsp/: Cargo.toml  mermaid-renderer.js  package-lock.json  package.json
lsp/src/: main.rs  mermaid-config.json  render.rs
lsp/tests/: integration_test.rs
release/: mermaid-lsp-aarch64-apple-darwin
scripts/: build.sh  (+3 more)
(+5 files in other folders)
