[package]
name = "mermaid-lsp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Mermaid language server"

[[bin]]
name = "mermaid-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.95"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
url = "2.0"
which = "5"
